pamc/src/tests/sample_code/should_fail/single_file/type_check/cannot_infer_todo_type/matchee.ph
type Unit {
    .C: Unit,
}

let foo = match todo {
    .C => Unit.C,
};
